@@ -13,14 +13,50 @@ function(file)
     }
     if(!inherits(file, "connection"))
         stop("argument `file' must be a character string or connection")
-    
+
+    y <- matrix("", nr = 0, nc = 2)
     x <- paste(readLines(file), collapse = "\n")
-    x <- strsplit(gsub("\n[ \t]+", " ", x), "\n")
-    x <- strsplit(unlist(x), "[ \t]")
-    y <- cbind(unlist(lapply(x, "[[", 1)),
-               unlist(lapply(x, function(t)
-                             paste(t[-c(1, which(nchar(t) == 0))],
-                                   collapse = " "))))
+
+    ## <FIXME>
+    ## We cannot necessarily assume that the 00Index-style file to be
+    ## read in was generated by Rdindex.  In particular, some packages
+    ## have 00Index files with (section) headers and footers in addition
+    ## to the data base chunks which are description lists rendered in
+    ## tabular form.  Hence, we need some heuristic for identifying the
+    ## db chunks.  Easy to the human eye (is there a column for aligning
+    ## entries?) but far from trivial ... as a first approximation we
+    ## try to consider chunks containing at least one tab or three
+    ## spaces a db chunk.  (A better heuristic would be the following:
+    ## entries rendered in one line have item and description separated
+    ## by at least 3 spaces or tabs; entries with a line break have
+    ## continuation lines starting with whitespace (no test whether for
+    ## alignment).  If a chunk is made of such entries only it is
+    ## considered a db chunk.  But not all current packages follow this
+    ## scheme.  Argh.)
+    ## Clearly we need to move to something better in future versions.
+    ## </FIXME>
+
+    ## First split into paragraph chunks separated by whitespace-only
+    ## lines.
+    for(chunk in unlist(strsplit(x, "\n[ \t\n]*\n"))) {
+        entries <- try({
+            if(regexpr("\(   \|\t\)", chunk) == -1)
+                NULL
+            else {
+                ## Combine entries with continuation lines.
+                chunk <- gsub("\n[ \t]+", "\t", chunk)
+                ## Split into lines and then according to whitespace.
+                x <- strsplit(unlist(strsplit(chunk, "\n")), "[ \t]")
+                cbind(unlist(lapply(x, "[[", 1)),
+                      unlist(lapply(x, function(t) {
+                          paste(t[-c(1, which(nchar(t) == 0))],
+                                collapse = " ")
+                      })))
+            }
+        })
+        if(!inherits(entries, "try-error") && NCOL(entries) == 2)
+            y <- rbind(y, entries)
+    }
     colnames(y) <- c("Item", "Description")
     y
 }
