@@ -98,6 +98,9 @@ BUG FIXES
 
     o	qr.coef(qr,*) now keeps the names of qr$qr.
 
+    o	read.00Index() no longer fails on data indexes not generated by
+	Rdindex (PR#1274).
+
 
 		CHANGES IN R VERSION 1.4.0
 
